Refactor: Simplify BeerMapper slightly