@@ -5,7 +5,6 @@ import me.noitcereon.practice.spring6restmvc.models.BeerDTO;
 import org.mapstruct.Mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper
 public interface BeerMapper {
@@ -14,12 +13,11 @@ public interface BeerMapper {
 
     BeerDTO beerToBeerDto(Beer customer);
 
-    default List<BeerDTO> beersToBeerDtos(List<Beer> beers){
-        return beers.stream().map(this::beerToBeerDto).collect(Collectors.toList());
-    }
-    default List<Beer> beerDtosToBeers(List<BeerDTO> beerDtos){
-        return beerDtos.stream().map(this::beerDtoToBeer).collect(Collectors.toList());
+    default List<BeerDTO> beersToBeerDtos(List<Beer> beers) {
+        return beers.stream().map(this::beerToBeerDto).toList();
     }
 
-
+    default List<Beer> beerDtosToBeers(List<BeerDTO> beerDtos) {
+        return beerDtos.stream().map(this::beerDtoToBeer).toList();
+    }
 }
